manifest/objects/MDPERSONATOR__MD_personatorResult__c.object
<CustomObject>
    <fields>
        <fullName>MDPERSONATOR__AddressDeliveryInstallation__c</fullName>
        <label>AddressDeliveryInstallation</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressExtras__c</fullName>
        <label>AddressExtras</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressHouseNumber__c</fullName>
        <label>AddressHouseNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressKey__c</fullName>
        <label>AddressKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressLine1__c</fullName>
        <label>AddressLine1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressLine2__c</fullName>
        <label>AddressLine2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressLockBox__c</fullName>
        <label>AddressLockBox</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressPostDirection__c</fullName>
        <label>AddressPostDirection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressPreDirection__c</fullName>
        <label>AddressPreDirection</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressPrivateMailboxName__c</fullName>
        <label>AddressPrivateMailboxName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressRouteService__c</fullName>
        <label>AddressRouteService</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressStreetName__c</fullName>
        <label>AddressStreetName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressStreetSuffix__c</fullName>
        <label>AddressStreetSuffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressSuiteName__c</fullName>
        <label>AddressSuiteName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressSuiteNumber__c</fullName>
        <label>AddressSuiteNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressTypeCode__c</fullName>
        <label>AddressTypeCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AddressprivateMailboxRange__c</fullName>
        <label>AddressprivateMailboxRange</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__AreaCode__c</fullName>
        <label>AreaCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CBSACode__c</fullName>
        <label>CBSACode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CBSADivisionCode__c</fullName>
        <label>CBSADivisionCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CBSADivisionLevel__c</fullName>
        <label>CBSADivisionLevel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CBSADivisionTitle__c</fullName>
        <label>CBSADivisionTitle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CBSALevel__c</fullName>
        <label>CBSALevel</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CBSATitle__c</fullName>
        <label>CBSATitle</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CarrierRoute__c</fullName>
        <label>CarrierRoute</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CensusBlock__c</fullName>
        <label>CensusBlock</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CensusKey__c</fullName>
        <label>CensusKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CensusTract__c</fullName>
        <label>CensusTract</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ChildrenAgeRange__c</fullName>
        <label>ChildrenAgeRange</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CityAbbreviation__c</fullName>
        <label>CityAbbreviation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CompanyName__c</fullName>
        <label>CompanyName</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CongressionalDistrict__c</fullName>
        <label>CongressionalDistrict</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryCode__c</fullName>
        <label>CountryCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountryName__c</fullName>
        <label>CountryName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountyFIPS__c</fullName>
        <label>CountyFIPS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountyName__c</fullName>
        <label>CountyName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountySubdivisionCode__c</fullName>
        <label>CountySubdivisionCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CountySubdivisionName__c</fullName>
        <label>CountySubdivisionName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__CreditCardUser__c</fullName>
        <label>CreditCardUser</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DateLastConfirmed__c</fullName>
        <label>DateLastConfirmed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DateOfBirth__c</fullName>
        <label>DateOfBirth</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DateOfDeath__c</fullName>
        <label>DateOfDeath</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DeliveryIndicator__c</fullName>
        <label>DeliveryIndicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DeliveryPointCheckDigit__c</fullName>
        <label>DeliveryPointCheckDigit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DeliveryPointCode__c</fullName>
        <label>DeliveryPointCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DemographicsGender__c</fullName>
        <label>DemographicsGender</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DemographicsResults__c</fullName>
        <label>DemographicsResults</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DistanceAddressToIP__c</fullName>
        <label>DistanceAddressToIP</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__DomainName__c</fullName>
        <label>DomainName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Education__c</fullName>
        <label>Education</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ElementarySchoolDistrictCode__c</fullName>
        <label>ElementarySchoolDistrictCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__ElementarySchoolDistrictName__c</fullName>
        <label>ElementarySchoolDistrictName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__EmailAddress__c</fullName>
        <label>EmailAddress</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__EstimatedHomeValue__c</fullName>
        <label>EstimatedHomeValue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__EthnicCode__c</fullName>
        <label>EthnicCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__EthnicGroup__c</fullName>
        <label>EthnicGroup</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__FullName__c</fullName>
        <label>FullName</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Gender2__c</fullName>
        <label>Gender2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Gender__c</fullName>
        <label>Gender</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__HouseholdIncome__c</fullName>
        <label>HouseholdIncome</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__HouseholdSize__c</fullName>
        <label>HouseholdSize</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPAddress__c</fullName>
        <label>IPAddress</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPCity__c</fullName>
        <label>IPCity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPConnectionSpeed__c</fullName>
        <label>IPConnectionSpeed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPConnectionType__c</fullName>
        <label>IPConnectionType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPContinent__c</fullName>
        <label>IPContinent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPCountryAbbreviation__c</fullName>
        <label>IPCountryAbbreviation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPCountryName__c</fullName>
        <label>IPCountryName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPDomainName__c</fullName>
        <label>IPDomainName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPISPName__c</fullName>
        <label>IPISPName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPLatitude__c</fullName>
        <label>IPLatitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPLongitude__c</fullName>
        <label>IPLongitude</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPPostalCode__c</fullName>
        <label>IPPostalCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPProxyDescription__c</fullName>
        <label>IPProxyDescription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPProxyType__c</fullName>
        <label>IPProxyType</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPRegion__c</fullName>
        <label>IPRegion</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__IPUTC__c</fullName>
        <label>IPUTC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Latitude__c</fullName>
        <label>Latitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__LengthOfResidence__c</fullName>
        <label>LengthOfResidence</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Longitude__c</fullName>
        <label>Longitude</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MailboxName__c</fullName>
        <label>MailboxName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Mapping__c</fullName>
        <label>Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MaritalStatus__c</fullName>
        <label>MaritalStatus</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MelissaAddressKey__c</fullName>
        <label>MelissaAddressKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MelissaAddresskeyBase__c</fullName>
        <label>MelissaAddresskeyBase</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MelissaIdentityKey__c</fullName>
        <label>MelissaIdentityKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__MoveDate__c</fullName>
        <label>MoveDate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameFirst2__c</fullName>
        <label>NameFirst2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameFirst__c</fullName>
        <label>NameFirst</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameLast2__c</fullName>
        <label>NameLast2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameLast__c</fullName>
        <label>NameLast</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameMiddle2__c</fullName>
        <label>NameMiddle2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameMiddle__c</fullName>
        <label>NameMiddle</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NamePrefix2__c</fullName>
        <label>NamePrefix2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NamePrefix__c</fullName>
        <label>NamePrefix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameSuffix2__c</fullName>
        <label>NameSuffix2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NameSuffix__c</fullName>
        <label>NameSuffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__NewAreaCode__c</fullName>
        <label>NewAreaCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Occupation__c</fullName>
        <label>Occupation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__OwnRent__c</fullName>
        <label>OwnRent</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneCountryCode__c</fullName>
        <label>PhoneCountryCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneCountryName__c</fullName>
        <label>PhoneCountryName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneExtension__c</fullName>
        <label>PhoneExtension</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneNumber__c</fullName>
        <label>PhoneNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhonePrefix__c</fullName>
        <label>PhonePrefix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PhoneSuffix__c</fullName>
        <label>PhoneSuffix</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PlaceCode__c</fullName>
        <label>PlaceCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PlaceName__c</fullName>
        <label>PlaceName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Plus4__c</fullName>
        <label>Plus4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PoliticalParty__c</fullName>
        <label>PoliticalParty</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PostalCode__c</fullName>
        <label>PostalCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PresenceOfChildren__c</fullName>
        <label>PresenceOfChildren</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PresenceOfSenior__c</fullName>
        <label>PresenceOfSenior</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__PrivateMailBox__c</fullName>
        <label>PrivateMailBox</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__RecordID__c</fullName>
        <externalId>true</externalId>
        <label>RecordID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Results__c</fullName>
        <label>Results</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Salutation__c</fullName>
        <label>Salutation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SecondarySchoolDistrictCode__c</fullName>
        <label>SecondarySchoolDistrictCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__SecondarySchoolDistrictName__c</fullName>
        <label>SecondarySchoolDistrictName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__StateDistrictLower__c</fullName>
        <label>StateDistrictLower</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__StateDistrictUpper__c</fullName>
        <label>StateDistrictUpper</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__StateName__c</fullName>
        <label>StateName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__Suite__c</fullName>
        <label>Suite</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__TopLevelDomain__c</fullName>
        <label>TopLevelDomain</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__UTC__c</fullName>
        <label>UTC</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__UnifiedSchoolDistrcitName__c</fullName>
        <label>UnifiedSchoolDistrcitName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__UnifiedSchoolDistrictCode__c</fullName>
        <label>UnifiedSchoolDistrictCode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__UnifiedSchoolDistrictName__c</fullName>
        <label>UnifiedSchoolDistrictName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDPERSONATOR__UrbanizationName__c</fullName>
        <label>UrbanizationName</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Clean Suite Personator Result</label>
    <nameField>
        <label>MD_personatorResult Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Clean Suite Personator Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>